--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   http: ^1.2.0
   cupertino_icons: ^1.0.2
   get: ^4.6.6
+  flutter_slidable: ^3.0.1
 
 dev_dependencies:
   flutter_test:
